# QML-oilgauge

./: CMakeLists.txt
single_gauge/: CMakeLists.txt  main.qml  qml.qrc
single_gauge/inc/: single_gauge.h
single_gauge/src/: single_gauge.cpp
src/: DevAppMain.cpp
